Title in nav bar

--- a/www/index.html
+++ b/www/index.html
@@ -25,10 +25,10 @@
 <!--
   The nav bar that will be updated as we navigate between views.
 -->
-<ion-nav-bar class="bar bar-header" title="iBUC">
+<ion-nav-bar class="bar bar-header bar-assertive" title="iBUC">
     <ion-nav-back-button>
     </ion-nav-back-button>
-        <div class="title">iBUC</div>
+    <ion-nav-title>iBUC</ion-nav-title>
 </ion-nav-bar>
 
 <div class="tabs-striped tabs-color-assertive">
