--- a/www/index.html
+++ b/www/index.html
@@ -35,7 +35,11 @@
     <div class="tabs">
         <a class="tab-item" ui-sref-active="active" ui-sref="home">
             <i class="icon ion-home"></i>
-            Test
+            Home
+        </a>
+        <a class="tab-item" ui-sref-active="active" ui-sref="profile">
+            <i class="icon ion-person"></i>
+            Profile
         </a>
         <a class="tab-item" ui-sref-active="active" href="#">
             <i class="icon ion-star"></i>
@@ -45,6 +49,7 @@
             <i class="icon ion-gear-a"></i>
             Settings
         </a>
+        
     </div>
 </div>
 
