--- a/www/index.html
+++ b/www/index.html
@@ -16,13 +16,24 @@
     <script src="lib/ionic/js/ionic.bundle.js"></script>
     <script src="lib/lodash/lodash.js"></script>
 
+    <!-- firebase -->
+    <script src="lib/firebase/firebase.js"></script>
+    <script src="lib/angularfire/dist/angularfire.min.js"></script>
+
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
+
+    <!-- controllers -->
+    <script src="js/controllers/homeCtrl.js"></script>
     <script src="js/controllers/settingsCtrl.js"></script>
+    <script src="js/controllers/firebaseCtrl.js"></script>
+
+    <!-- services -->
     <script src="js/services/resultsAnalysisService.js"></script>
+    <script src="js/services/dataReferenceManagementService.js"></script>
 </head>
 <body ng-app="starter">
 <!--
@@ -44,15 +55,11 @@
             <i class="icon ion-person"></i>
             Profile
         </a>
-        <a class="tab-item" ui-sref-active="active" href="#">
-            <i class="icon ion-star"></i>
-            Favorites
-        </a>
         <a class="tab-item" ui-sref-active="active" ui-sref="settings">
             <i class="icon ion-gear-a"></i>
             Settings
         </a>
-        
+
     </div>
 </div>
 
