Config - Scroll Back Online

--- a/www/index.html
+++ b/www/index.html
@@ -41,34 +41,15 @@
 <ion-nav-bar class="bar bar-header bar-assertive" title="iBUC">
     <ion-nav-back-button>
     </ion-nav-back-button>
-    <ion-nav-title>iBUC</ion-nav-title>
+    <ion-nav-title>iPipi</ion-nav-title>
 </ion-nav-bar>
-
-<div class="tabs-striped tabs-color-assertive">
-    <div class="tabs">
-        <a class="tab-item" ui-sref-active="active" ui-sref="home">
-            <i class="icon ion-home"></i>
-            Home
-        </a>
-        <a class="tab-item" ui-sref-active="active" ui-sref="profile">
-            <i class="icon ion-person"></i>
-            Profile
-        </a>
-        <a class="tab-item" ui-sref-active="active" ui-sref="settings">
-            <i class="icon ion-gear-a"></i>
-            Settings
-        </a>
-
-    </div>
-</div>
 
 <!--
   The views will be rendered in the <ion-nav-view> directive below
   Templates are in the /templates folder (but you could also
   have templates inline in this html file if you'd like).
 -->
-<ion-nav-view>
-    <ion-content delegate-handle="scrollArea">
-        </ion-nav-view>
+<ion-nav-view class="has-header">
+</ion-nav-view>
 </body>
 </html>
