--- a/www/index.html
+++ b/www/index.html
@@ -38,7 +38,7 @@
 <!--
   The nav bar that will be updated as we navigate between views.
 -->
-<ion-nav-bar class="bar bar-header bar-assertive" title="iBUC">
+<ion-nav-bar class="bar bar-header bar-color" title="iBUC">
     <ion-nav-back-button>
     </ion-nav-back-button>
     <ion-nav-title>iPipi</ion-nav-title>
