--- a/www/index.html
+++ b/www/index.html
@@ -35,6 +35,9 @@
     <!-- services -->
     <script src="js/services/resultsAnalysisService.js"></script>
     <script src="js/services/dataReferenceManagementService.js"></script>
+
+    <!-- Directive -->
+    <script src="js/directives/displaySymptom.js"></script>
 </head>
 <body ng-app="starter">
 <!--
