--- a/www/index.html
+++ b/www/index.html
@@ -22,6 +22,7 @@
     <script src="lib/angularfire/dist/angularfire.min.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
+    <script src="lib/ngCordova/dist/ng-cordova.js"></script>
     <script src="cordova.js"></script>
     <script src="cordova_plugins.js"></script>
 
