--- a/www/index.html
+++ b/www/index.html
@@ -19,6 +19,7 @@
 
     <!-- firebase -->
     <script src="lib/firebase/firebase.js"></script>
+	<script src="lib/lodash/lodash.js"></script>
     <script src="lib/angularfire/dist/angularfire.min.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
