Removed alert on push notification received

--- a/www/index.html
+++ b/www/index.html
@@ -55,14 +55,7 @@
 
         //set push notifications handler
         document.addEventListener('push-notification', function(event) {
-            var title = event.notification.title;
-            var userData = event.notification.userdata;
-
-            if(typeof(userData) != "undefined"){
-                console.warn('user data: ' + JSON.stringify(userData));
-            }
-
-            alert(title);
+          console.log("Push notification received: " + JSON.stringify(event.notification));
         });
 
         //initialize Pushwoosh with projectid: "GOOGLE_PROJECT_NUMBER", pw_appid : "PUSHWOOSH_APP_ID". This will trigger all pending push notifications on start.
